# ty-pre-commit

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
